--- a/Práctica 02/practica02_ejercicio02.htm
+++ b/Práctica 02/practica02_ejercicio02.htm
@@ -559,13 +559,105 @@ checkPlugin();
 
 									</ul>
 
-									<div class="gamelistmoregames"><a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/juegos-buscar-objetos/" title="Todos los juegos de buscar objetos online">Todos los juegos de buscar objetos online</a></div></div></div><div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div></div><div class="box258 box258green box_singlelink boxgreen dynamic_box"><div class="boxheader_container"><div class="boxheader" style="height:34px;"><div class="boxheader_right"></div><div class="headerinfo headerinfo_green" style="top:10px;"><script src="./practica02_ejercicio02_files/jquery.tools.tooltip.min.js" type="text/javascript"></script><span class="tooltip3">info</span><div class="tooltip"><p>Haz combinaciones y ábrete paso en nuestros juegos de 3 en raya gratis.</p></div><script type="text/javascript">$(".tooltip3").tooltip({relative:"true", offset:[0,20], position:"bottom left"});</script></div><h2><a href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/" title="Juegos de 3 en raya Online">Juegos de 3 en raya</a></h2></div></div><div class="boxcontent_container"><div class="boxcontent_right"></div><div class="boxcontent gamelistbox"><ul><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/juegos-cambiar/bejeweled-3/" title="Bejeweled 3"><span class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/webpictures/60x45/bejeweled-3-2740.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Bejeweled 3" title="Bejeweled 3" style="border:0; width:60px; height:45px; align:center;"></span><div class="gamelistgamename" style="height:15px;">Bejeweled 3</div><div class="gamelistplayers" style="height:15px;"></div><div class="gamelistplay" style="height:15px;">juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/juegos-bloques/4-elements-ii/" title="4 Elements II"><span class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/webpictures/60x45/4-elements-ii-2904.jpg) top left no-repeat"><img src="images/overlay.gif" alt="4 Elements II" title="4 Elements II" style="border:0; width:60px; height:45px; align:center;"></span><div class="gamelistgamename" style="height:15px;">4 Elements II</div><div class="gamelistplayers" style="height:15px;"></div><div class="gamelistplay" style="height:15px;">juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/juegos-bloques/gold-rush/" title="Gold Rush"><span class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/webpictures/60x45/gold-rush-17.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Gold Rush" title="Gold Rush" style="border:0; width:60px; height:45px; align:center;"></span><div class="gamelistgamename" style="height:15px;">Gold Rush</div><div class="gamelistplayers" style="height:15px;"></div><div class="gamelistplay" style="height:15px;">juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/juegos-cambiar/farmscapes/" title="Farmscapes"><span class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/webpictures/60x45/farmscapes-2796.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Farmscapes" title="Farmscapes" style="border:0; width:60px; height:45px; align:center;"></span><div class="gamelistgamename" style="height:15px;">Farmscapes</div><div class="gamelistplayers" style="height:15px;"></div><div class="gamelistplay" style="height:15px;">juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/juegos-cambiar/cradle-of-egypt/" title="Cradle of Egypt"><span class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/webpictures/60x45/cradle-of-egypt-2962.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Cradle of Egypt" title="Cradle of Egypt" style="border:0; width:60px; height:45px; align:center;"></span><div class="gamelistgamename" style="height:15px;">Cradle of Egypt</div><div class="gamelistplayers" style="height:15px;"></div><div class="gamelistplay" style="height:15px;">juega gratis</div></a></li></ul><div class="gamelistmoregames"><a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/" title="Todos los juegos de 3 en raya online">Todos los juegos de 3 en raya online</a></div></div></div><div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div></div><div class="box258 box258orange box_singlelink boxorange dynamic_box"><div class="boxheader_container"><div class="boxheader" style="height:34px;"><div class="boxheader_right"></div><div class="headerinfo headerinfo_orange" style="top:10px;"><script src="./practica02_ejercicio02_files/jquery.tools.tooltip.min.js" type="text/javascript"></script><span class="tooltip4">info</span><div class="tooltip"><p>Organiza tu tiempo en nuestros juegos de gestión de tiempo gratis.</p></div><script type="text/javascript">
+									<div class="gamelistmoregames">
+										<a onfocus="this.blur();" href="" title="">
+											Todos los juegos de buscar objetos online
+										</a>
+									</div>
+								</div>
+							</div>
+							<div class="boxbottom_container">
+								<div class="boxbottom">
+									<div class="boxbottom_right"></div>
+								</div>
+							</div>
+						</div>
+						<div class="box258 box258green box_singlelink boxgreen dynamic_box">
+							<div class="boxheader_container">
+								<div class="boxheader" style="height:34px;">
+									<div class="boxheader_right"></div>
+									<div class="headerinfo headerinfo_green" style="top:10px;">
+										<script src="./practica02_ejercicio02_files/jquery.tools.tooltip.min.js" type="text/javascript">
+										</script>
+										<span class="tooltip3">info</span>
+										<div class="tooltip">
+											<p>Haz combinaciones y ábrete paso en nuestros juegos de 3 en raya gratis.</p>
+										</div>
+										<script type="text/javascript">
+											$(".tooltip3").tooltip({relative:"true", offset:[0,20], position:"bottom left"});</script>
+										</div>
+										<h2>
+											<a href="" title="">Juegos de 3 en raya</a>
+										</h2>
+									</div>
+								</div>
+								<div class="boxcontent_container">
+									<div class="boxcontent_right"></div>
+									<div class="boxcontent gamelistbox">
+										<ul>
+										<li class="gamelistitem">
+												<a onfocus="this.blur();" href="" title="Gold Rush">
+													<span class="gamelistgameimg" style="background: url(images/thumb_red1.jpg) top left no-repeat">
+														<img src="images/overlay.gif" alt="Gold Rush" title="Gold Rush" style="border:0; width:60px; height:45px; align:center;">
+													</span>
+													<div class="gamelistgamename" style="height:15px;">Gold Rush</div>
+													<div class="gamelistplayers" style="height:15px;"></div>
+													<div class="gamelistplay" style="height:15px;">juega gratis</div>
+												</a>
+											</li>
+
+											<li class="gamelistitem">
+												<a onfocus="this.blur();" href="" title="Gold Rush">
+													<span class="gamelistgameimg" style="background: url(images/thumb_green2.jpg) top left no-repeat">
+														<img src="images/overlay.gif" alt="Gold Rush" title="Gold Rush" style="border:0; width:60px; height:45px; align:center;">
+													</span>
+													<div class="gamelistgamename" style="height:15px;">Gold Rush</div>
+													<div class="gamelistplayers" style="height:15px;"></div>
+													<div class="gamelistplay" style="height:15px;">juega gratis</div>
+												</a>
+											</li>
+											<li class="gamelistitem">
+												<a onfocus="this.blur();" href="" title="Gold Rush">
+													<span class="gamelistgameimg" style="background: url(images/thumb_yellow1.jpg) top left no-repeat">
+														<img src="images/overlay.gif" alt="Gold Rush" title="Gold Rush" style="border:0; width:60px; height:45px; align:center;">
+													</span>
+													<div class="gamelistgamename" style="height:15px;">Gold Rush</div>
+													<div class="gamelistplayers" style="height:15px;"></div>
+													<div class="gamelistplay" style="height:15px;">juega gratis</div>
+												</a>
+											</li>
+											<li class="gamelistitem">
+												<a onfocus="this.blur();" href="" title="Gold Rush">
+													<span class="gamelistgameimg" style="background: url(images/thumb_gray1.jpg) top left no-repeat">
+														<img src="images/overlay.gif" alt="Gold Rush" title="Gold Rush" style="border:0; width:60px; height:45px; align:center;">
+													</span>
+													<div class="gamelistgamename" style="height:15px;">Gold Rush</div>
+													<div class="gamelistplayers" style="height:15px;"></div>
+													<div class="gamelistplay" style="height:15px;">juega gratis</div>
+												</a>
+											</li>
+											<li class="gamelistitem">
+												<a onfocus="this.blur();" href="" title="Gold Rush">
+													<span class="gamelistgameimg" style="background: url(images/thumb_orange1.jpg) top left no-repeat">
+														<img src="images/overlay.gif" alt="Gold Rush" title="Gold Rush" style="border:0; width:60px; height:45px; align:center;">
+													</span>
+													<div class="gamelistgamename" style="height:15px;">Gold Rush</div>
+													<div class="gamelistplayers" style="height:15px;"></div>
+													<div class="gamelistplay" style="height:15px;">juega gratis</div>
+												</a>
+											</li>
+
+										</ul>
+										<div class="gamelistmoregames">
+										<a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/" title="Todos los juegos de 3 en raya online">Todos los juegos de 3 en raya online</a></div></div></div><div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div></div><div class="box258 box258orange box_singlelink boxorange dynamic_box"><div class="boxheader_container"><div class="boxheader" style="height:34px;"><div class="boxheader_right"></div><div class="headerinfo headerinfo_orange" style="top:10px;"><script src="./practica02_ejercicio02_files/jquery.tools.tooltip.min.js" type="text/javascript"></script><span class="tooltip4">info</span><div class="tooltip"><p>Organiza tu tiempo en nuestros juegos de gestión de tiempo gratis.</p></div><script type="text/javascript">
 											$(".tooltip4").tooltip({relative:"true", offset:[0,20], position:"bottom left"});
 											$(".tooltip4").mouseover(function() {
 											$(this).parents('div').css('z-index', 1); //because IE is stupid
 											$('.headerinfo .tooltip').css('z-index', 1000);
 											});
-										</script></div><h2><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/" title="Juegos de gestión del tiempo">Juegos de gestión del tiempo</a></h2></div></div><div class="boxcontent_container"><div class="boxcontent_right"></div><div class="boxcontent gamelistbox"><ul><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-wonder-wedding-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-wonder-wedding-deluxe-91.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s Wonder Wedding Deluxe" title="Delicious - Emily\&#39;s Wonder Wedding Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-true-love-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-true-love-deluxe-63.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s True Love Deluxe" title="Delicious - Emily\&#39;s True Love Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-accion/juegos-de-aventura/rescue-team-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/rescue-team-deluxe-2824.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Rescue Team Deluxe" title="Rescue Team Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Rescue Team</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-shopping/boutique-boulevard-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/boutique-boulevard-deluxe-3234.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Boutique Boulevard Deluxe" title="Boutique Boulevard Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Boutique Boulevard</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-tea-garden-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-tea-garden-deluxe-57.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s Tea Garden Deluxe" title="Delicious - Emily\&#39;s Tea Garden Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li></ul><div class="gamelistmoregames"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/" title="Todos los juegos de gestión del tiempo">Todos los juegos de gestión del tiempo</a></div></div></div><div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div></div><div class="box258 box258lightorange box_singlelink boxlightorange dynamic_box">
+										</script></div>
+
+										<h2><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/" title="Juegos de gestión del tiempo">Juegos de gestión del tiempo</a></h2></div></div><div class="boxcontent_container"><div class="boxcontent_right"></div><div class="boxcontent gamelistbox"><ul><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-wonder-wedding-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-wonder-wedding-deluxe-91.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s Wonder Wedding Deluxe" title="Delicious - Emily\&#39;s Wonder Wedding Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-true-love-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-true-love-deluxe-63.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s True Love Deluxe" title="Delicious - Emily\&#39;s True Love Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-accion/juegos-de-aventura/rescue-team-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/rescue-team-deluxe-2824.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Rescue Team Deluxe" title="Rescue Team Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Rescue Team</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-shopping/boutique-boulevard-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/boutique-boulevard-deluxe-3234.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Boutique Boulevard Deluxe" title="Boutique Boulevard Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Boutique Boulevard</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-tea-garden-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-tea-garden-deluxe-57.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s Tea Garden Deluxe" title="Delicious - Emily\&#39;s Tea Garden Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li></ul><div class="gamelistmoregames"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/" title="Todos los juegos de gestión del tiempo">Todos los juegos de gestión del tiempo</a></div></div></div><div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div></div><div class="box258 box258lightorange box_singlelink boxlightorange dynamic_box">
     <div class="boxheader_container">
       <div class="boxheader" style="height:34px;">
         <div class="boxheader_right"></div>
