--- a/Práctica 02/practica02_ejercicio02.htm
+++ b/Práctica 02/practica02_ejercicio02.htm
@@ -649,104 +649,21 @@ checkPlugin();
 
 										</ul>
 										<div class="gamelistmoregames">
-										<a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/" title="Todos los juegos de 3 en raya online">Todos los juegos de 3 en raya online</a></div></div></div><div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div></div><div class="box258 box258orange box_singlelink boxorange dynamic_box"><div class="boxheader_container"><div class="boxheader" style="height:34px;"><div class="boxheader_right"></div><div class="headerinfo headerinfo_orange" style="top:10px;"><script src="./practica02_ejercicio02_files/jquery.tools.tooltip.min.js" type="text/javascript"></script><span class="tooltip4">info</span><div class="tooltip"><p>Organiza tu tiempo en nuestros juegos de gestión de tiempo gratis.</p></div><script type="text/javascript">
-											$(".tooltip4").tooltip({relative:"true", offset:[0,20], position:"bottom left"});
-											$(".tooltip4").mouseover(function() {
-											$(this).parents('div').css('z-index', 1); //because IE is stupid
-											$('.headerinfo .tooltip').css('z-index', 1000);
-											});
-										</script></div>
+											<a onfocus="this.blur();" href="http://www.zylom.com/es/juegos-online-gratis/3-en-raya/" title="Todos los juegos de 3 en raya online">Todos los juegos de 3 en raya online</a>
+										</div>
+									</div>
+								</div>
+								<div class="boxbottom_container">
+									<div class="boxbottom">
+										<div class="boxbottom_right"></div>
+									</div>
+								</div>
+							</div>
 
-										<h2><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/" title="Juegos de gestión del tiempo">Juegos de gestión del tiempo</a></h2></div></div><div class="boxcontent_container"><div class="boxcontent_right"></div><div class="boxcontent gamelistbox"><ul><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-wonder-wedding-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-wonder-wedding-deluxe-91.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s Wonder Wedding Deluxe" title="Delicious - Emily\&#39;s Wonder Wedding Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-true-love-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-true-love-deluxe-63.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s True Love Deluxe" title="Delicious - Emily\&#39;s True Love Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-accion/juegos-de-aventura/rescue-team-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/rescue-team-deluxe-2824.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Rescue Team Deluxe" title="Rescue Team Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Rescue Team</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-shopping/boutique-boulevard-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/boutique-boulevard-deluxe-3234.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Boutique Boulevard Deluxe" title="Boutique Boulevard Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Boutique Boulevard</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li><li class="gamelistitem"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/juegos-de-cocinar/delicious-emily-s-tea-garden-deluxe/"><div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/gamepictures/60x45/delicious-emily-s-tea-garden-deluxe-57.jpg) top left no-repeat"><img src="images/overlay.gif" alt="Delicious - Emily\&#39;s Tea Garden Deluxe" title="Delicious - Emily\&#39;s Tea Garden Deluxe" style="border:0; width:60px; height:45px; align:center;"></div><div class="gamelistgamename">Delicious - Emily's...</div><div class="gamelistplayanddownload">descarga y juega gratis</div></a></li></ul><div class="gamelistmoregames"><a onfocus="this.blur();" href="http://www.zylom.com/es/descargar-juegos/juegos-de-gestion-del-tiempo/" title="Todos los juegos de gestión del tiempo">Todos los juegos de gestión del tiempo</a></div></div></div><div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div></div><div class="box258 box258lightorange box_singlelink boxlightorange dynamic_box">
-    <div class="boxheader_container">
-      <div class="boxheader" style="height:34px;">
-        <div class="boxheader_right"></div>
-          <h2>
-            <a onfocus="this.blur();" href="http://www.zylom.com/es/juegos/multijugador/" title="Todos los juegos multijugador">
-              juegos multijugador</a>
-          </h2>
-         </div>
-      </div>
-      <div class="boxcontent_container">
-       <div class="boxcontent_right"></div>
-       <div class="boxcontent gamelistbox">
-          <ul>
-            <li class="gamelistitem">
-                    <a onfocus="this.blur();" href="http://www.zylom.com/es/juegos/multijugador/bingo/" style="border:0; display:block;" title="Bingo">
-                      <div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/site/zylom/multiplayer/game_images/60x45/60x45_20.jpg) top left no-repeat">
-                        <img src="images/overlay.gif" alt="Bingo" title="Bingo" style="border:0; width:60px; height:45px; align:center;">
-                      </div>
-                      <div class="gamelistgamename">
-                        Bingo</div>
-                      <div class="gamelistplayanddownload">
-                        Juega y Gana »
-                      </div>
-                    </a>
-                  </li>
 
-                <li class="gamelistitem">
-                    <a onfocus="this.blur();" href="http://www.zylom.com/es/juegos/multijugador/royaldice/" style="border:0; display:block;" title="RoyalDice">
-                      <div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/site/zylom/multiplayer/game_images/60x45/60x45_33.jpg) top left no-repeat">
-                        <img src="images/overlay.gif" alt="RoyalDice" title="RoyalDice" style="border:0; width:60px; height:45px; align:center;">
-                      </div>
-                      <div class="gamelistgamename">
-                        RoyalDice</div>
-                      <div class="gamelistplayanddownload">
-                        Juega y Gana »
-                      </div>
-                    </a>
-                  </li>
+	    					<div class="clearer"></div>
 
-                <li class="gamelistitem">
-                    <a onfocus="this.blur();" href="http://www.zylom.com/es/juegos/multijugador/wordtornado/" style="border:0; display:block;" title="Wordtornado">
-                      <div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/site/zylom/multiplayer/game_images/60x45/60x45_24.jpg) top left no-repeat">
-                        <img src="images/overlay.gif" alt="Wordtornado" title="Wordtornado" style="border:0; width:60px; height:45px; align:center;">
-                      </div>
-                      <div class="gamelistgamename">
-                        Wordtornado</div>
-                      <div class="gamelistplayanddownload">
-                        Juega y Gana »
-                      </div>
-                    </a>
-                  </li>
-
-                <li class="gamelistitem">
-                    <a onfocus="this.blur();" href="http://www.zylom.com/es/juegos/multijugador/spinbingo/" style="border:0; display:block;" title="SpinBingo">
-                      <div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/site/zylom/multiplayer/game_images/60x45/60x45_31.jpg) top left no-repeat">
-                        <img src="images/overlay.gif" alt="SpinBingo" title="SpinBingo" style="border:0; width:60px; height:45px; align:center;">
-                      </div>
-                      <div class="gamelistgamename">
-                        SpinBingo</div>
-                      <div class="gamelistplayanddownload">
-                        Juega y Gana »
-                      </div>
-                    </a>
-                  </li>
-
-                <li class="gamelistitem">
-                    <a onfocus="this.blur();" href="http://www.zylom.com/es/juegos/multijugador/scratchbingo/" style="border:0; display:block;" title="ScratchBingo">
-                      <div class="gamelistgameimg" style="background: url(http://cdn.ghstatic.com/images/site/zylom/multiplayer/game_images/60x45/60x45_35.jpg) top left no-repeat">
-                        <img src="images/overlay.gif" alt="ScratchBingo" title="ScratchBingo" style="border:0; width:60px; height:45px; align:center;">
-                      </div>
-                      <div class="gamelistgamename">
-                        ScratchBingo</div>
-                      <div class="gamelistplayanddownload">
-                        Juega y Gana »
-                      </div>
-                    </a>
-                  </li>
-
-                </ul>
-        <div class="gamelistmoregames">
-            <a onfocus="this.blur();" href="http://www.zylom.com/es/juegos/multijugador/" title="Todos los juegos multijugador">
-                Todos los juegos multijugador</a>
-        </div>
-      </div>
-      </div>
-      <div class="boxbottom_container"><div class="boxbottom"><div class="boxbottom_right"></div></div></div>
-    </div><div class="clearer"></div>
-
-        <div class="clearer"></div>
+        					<div class="clearer"></div>
 
         <div class="reviewbox">
             <p class="header">Lo que opinan los jugadores de nuestros juegos:</p>
